# SensMonitor

./: CMakeLists.txt  Licence  README.md  README_ble.md  README_sensors.md  README_wifi.md  nrf52dk_nrf52832.overlay  prj.conf
NodeMCU/main/: esp32_uart_manager.cpp  esp32_uart_manager.h  main.ino
ble/: ble_manager.c  ble_manager.h  bme280_service.c  bme280_service.h
src/: main.c
